; ModuleID = '/home/carl/AnghaBench/git/extr_ref-filter.c_filter_ref_kind.c'
source_filename = "/home/carl/AnghaBench/git/extr_ref-filter.c_filter_ref_kind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_filter = type { i64 }

@FILTER_REFS_BRANCHES = common dso_local global i64 0, align 8
@FILTER_REFS_REMOTES = common dso_local global i64 0, align 8
@FILTER_REFS_TAGS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ref_filter*, i8*)* @filter_ref_kind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @filter_ref_kind(%struct.ref_filter* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ref_filter*, align 8
  %5 = alloca i8*, align 8
  store %struct.ref_filter* %0, %struct.ref_filter** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load %struct.ref_filter*, %struct.ref_filter** %4, align 8
  %7 = getelementptr inbounds %struct.ref_filter, %struct.ref_filter* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @FILTER_REFS_BRANCHES, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %23, label %11

11:                                               ; preds = %2
  %12 = load %struct.ref_filter*, %struct.ref_filter** %4, align 8
  %13 = getelementptr inbounds %struct.ref_filter, %struct.ref_filter* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @FILTER_REFS_REMOTES, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %23, label %17

17:                                               ; preds = %11
  %18 = load %struct.ref_filter*, %struct.ref_filter** %4, align 8
  %19 = getelementptr inbounds %struct.ref_filter, %struct.ref_filter* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @FILTER_REFS_TAGS, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %28

23:                                               ; preds = %17, %11, %2
  %24 = load %struct.ref_filter*, %struct.ref_filter** %4, align 8
  %25 = getelementptr inbounds %struct.ref_filter, %struct.ref_filter* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = trunc i64 %26 to i32
  store i32 %27, i32* %3, align 4
  br label %31

28:                                               ; preds = %17
  %29 = load i8*, i8** %5, align 8
  %30 = call i32 @ref_kind_from_refname(i8* %29)
  store i32 %30, i32* %3, align 4
  br label %31

31:                                               ; preds = %28, %23
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @ref_kind_from_refname(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
